[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ui/nodes/graph_2d/graph_2d.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/nodes/graph_2d/graph_2d_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxLine" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.9, 0.9, 0.9, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxLine" id=2]
vertical = true

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )
custom_constants/separation = 0
custom_styles/separator = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 10.0
margin_right = 507.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="ControlsLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 497.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Controls:"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 497.0
margin_bottom = 41.0

[node name="StartSerialButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 20.0
text = "Start Serial Connection"

[node name="PauseDataCollection" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 314.0
margin_bottom = 20.0
text = "Toggle Data Collection"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 497.0
margin_bottom = 49.0
custom_styles/separator = SubResource( 1 )

[node name="GraphLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 497.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Graph of time series data:"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 497.0
margin_bottom = 406.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Graph2D" parent="HBoxContainer/VBoxContainer/MarginContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 16.0
margin_right = 481.0
margin_bottom = 316.0
rect_min_size = Vector2( 50, 300 )
xmax = 100.0
ymin = 0.0
ymax = 5.0
xlabel = "sample number"
ylabel = "resistance (kOhm)"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 497.0
margin_bottom = 414.0
custom_styles/separator = SubResource( 1 )

[node name="TableLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 418.0
margin_right = 497.0
margin_bottom = 435.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Table of time series data:"

[node name="TableValueLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 439.0
margin_right = 497.0
margin_bottom = 592.0
focus_mode = 2
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
scroll_following = true
selection_enabled = true

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 596.0
margin_right = 497.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -486, -186 )
custom_constants/separation = 4
custom_styles/separator = SubResource( 4 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 507.0
margin_right = 517.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )
custom_styles/separator = SubResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 517.0
margin_right = 1014.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="SerialOutputLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 497.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Serial port monitor:"

[node name="SerialPortMonitorLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 21.0
margin_right = 497.0
margin_bottom = 592.0
focus_mode = 2
size_flags_vertical = 7
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
scroll_following = true
selection_enabled = true

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
margin_top = 596.0
margin_right = 497.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -486, -186 )
custom_constants/separation = 4
custom_styles/separator = SubResource( 4 )

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 1014.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )
custom_constants/separation = 0
custom_styles/separator = SubResource( 5 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/StartSerialButton" to="." method="_on_StartSerialButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/PauseDataCollection" to="." method="_on_PauseDataCollection_pressed"]
